fix: startowa migracja
