# app/Http/Controllers/GpsController.php
@@ -8,6 +8,14 @@ use App\Gps\GoogleProvider;
 
 class GpsController extends Controller
 {
+
+    public $token;
+
+    public $address;
+
+    public $position;
+
+
     /**
      * Create a new controller instance.
      *
@@ -26,7 +34,7 @@ class GpsController extends Controller
      */
     public function init(Request $request): void
     {
-        $provider = $request->input('provider');
+        $provider = $request->post('provider');
 
         if ((bool) $provider === false) {
             throw new \Exception('Undefined gps service provider');
@@ -50,5 +58,21 @@ class GpsController extends Controller
 
     }//end init()
 
-    //
+    
+    public function cache(): void
+    {
+        \Db::insert(
+            'INSERT INTO `GPS_CACHE` (`LAT`, `LNG`, `ADDRESS`, `USED`, `CREATED_AT`, `CREATED_BY`) VALUES (:LAT, :LNG, :ADDRESS, 1, :CREATED_AT, :CREATED_BY)',
+            [
+                'LAT'        => $this->position['lat'],
+                'LNG'        => $this->position['lng'],
+                'ADDRESS'    => $this->address,
+                'CREATED_AT' => date('Y-m-d H:i:s'),
+                'CREATED_BY' => 'TEST',
+            ]
+        );
+
+    }//end cache()
+
+
 }
